--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,9 +5,9 @@ RUN apt-get -qq update && DEBIAN_FRONTEND=noninteractive apt-get install -y -q \
 	make jhead liblocale-gettext-perl perl perlmagick libmath-bigint-gmp-perl \
 	gettext ruby1.9.1 postgresql gnuplot ttf-bitstream-vera libexpat1-dev
 
-RUN git clone https://github.com/mysociety/fixmystreet.git /fixmystreet
+RUN git clone https://github.com/mysociety/fixmystreet.git /fms
 
-WORKDIR /fixmystreet
+WORKDIR /fms
 
 # Install prerequisite Perl modules
 RUN bin/install_perl_modules
@@ -18,9 +18,9 @@ RUN $(ruby -rubygems -e 'puts Gem.user_dir')/bin/bundle install > --deployment -
 RUN bin/make_css
 
 # Install database schema
-psql -U fms fms < db/schema.sql
-psql -U fms fms < db/generate_secret.sql
-psql -U fms fms < db/alert_types.sql
+RUN psql -h db -U fms fms < db/schema.sql
+RUN psql -h db -U fms fms < db/generate_secret.sql
+RUN psql -h db -U fms fms < db/alert_types.sql
 
 # Setup config
-ADD general.yml /fixmystreet/conf/general.yml
+ADD general.yml /fms/conf/general.yml
