--- a/web/general.yml
+++ b/web/general.yml
@@ -14,7 +14,7 @@
 # for you.
 
 # PostgreSQL database details for FixMyStreet
-FMS_DB_HOST: 'localhost'
+FMS_DB_HOST: 'db'
 FMS_DB_PORT: '5432'
 FMS_DB_NAME: 'fms'
 FMS_DB_USER: 'fms'
