--- a/app/general.yml
+++ b/app/general.yml
@@ -18,10 +18,10 @@ FMS_DB_HOST: 'db'
 FMS_DB_PORT: '5432'
 FMS_DB_NAME: 'fms'
 FMS_DB_USER: 'fms'
-FMS_DB_PASS: ''
+FMS_DB_PASS: 'fms'
 
 # The base URL of the install.
-BASE_URL: 'http://www.example.org'
+BASE_URL: 'http://localhost:3000'
 # Use the below if you're using the Catalyst development server
 #   BASE_URL: 'http://localhost:3000'
 SECURE_PROXY_SSL_HEADER: ''
