--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ app:
     - db:db
   expose:
     - 3000
+  ports:
+    - "3000:3000"
   volumes:
     - /fixmystreet
   command: bash -c "/fixmystreet/script/fixmystreet_app_server.pl -d --fork"
