--- a/app/general.yml
+++ b/app/general.yml
@@ -79,8 +79,8 @@ GEO_CACHE: '../cache/'
 #   MAPIT_URL: 'http://global.mapit.mysociety.org/'
 # And then specify whichever type code have the boundaries you want:
 #   MAPIT_TYPES: [ 'O06' ]
-MAPIT_URL: ''
-MAPIT_TYPES: [ 'ZZZ' ]
+MAPIT_URL: 'http://global.mapit.mysociety.org/'
+MAPIT_TYPES: [ 'O06' ]
 
 # If you are using global MapIt, you might want to restrict FixMyStreet usage
 # to only one or more areas, rather than all O04, for example. Provide MapIt
