--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get -qq update && DEBIAN_FRONTEND=noninteractive apt-get install -y -q g
 
 RUN locale-gen en_US.utf8 && \
 	cachebuster=b953b35 git clone --recursive https://github.com/mysociety/fixmystreet.git
-
+ENV LANG en_US.UTF-8
 
 WORKDIR /fixmystreet
 
@@ -16,7 +16,7 @@ RUN apt-get install -y language-pack-fr
 # Install prerequisite Perl modules
 RUN bin/install_perl_modules
 
-ENV LANG fr_FR.UTF-8
+#ENV LANG fr_FR.UTF-8
 # Install compass and generate CSS
 # RUN gem install --user-install --no-ri --no-rdoc bundler
 # RUN $(ruby -rubygems -e 'puts Gem.user_dir')/bin/bundle install --deployment --path ../gems --binstubs ../gem-bin
